Added week 4 entry

--- a/diaries/z5311419.md
+++ b/diaries/z5311419.md
@@ -10,3 +10,7 @@
 - Add user stories to jira
   - Assign each team member tasks for sprint 1
 - Start planning and coding (Frontend)
+# Week 4
+- Set up frontend file structure
+- Completed allocated tickets for sprint 1
+- Completed demo 
