--- a/diaries/z5255613.md
+++ b/diaries/z5255613.md
@@ -8,3 +8,8 @@
 * finished proposal
 * assigned jira tickets
 * did authentication and signup
+
+# Week 4:
+* fixed bugs for put api
+* improved error checks for login and signup
+* discussed demo approach
