sunny diary week 4 entry

--- a/diaries/z5214481.md
+++ b/diaries/z5214481.md
@@ -13,3 +13,9 @@
 - Finalised user flow diagrams and mock designs.
 - Assigned tasks for sprint 1.
 - Setup initial folder for frontend.
+
+# Week 4:
+- Complete landing page
+- Complete sign up page
+- Complete profile page (excluding busyness and perks/tier info page)
+- Prep for demo
