Add week 4 diary entry

--- a/diaries/z5362204.md
+++ b/diaries/z5362204.md
@@ -8,3 +8,7 @@
 # Week 3
 * write up a brief descripton of our novel features/functionality
 * write up some user stories and their corresponding acceptance criteria
+
+# Week 4
+* setup & document docker-compose to run the pPstgres database and backend API
+* finish assigned tickets for sprint 1
