--- a/diaries/z5207613.md
+++ b/diaries/z5207613.md
@@ -9,3 +9,6 @@ Wrote user stories and acceptance criteria. Finished and submitted the proposal 
 
 # Week 4
 Started and finished coding for the backend in sprint 1. Made sure that the work done in sprint 1 was ready to be presented for the week 5 demo A.
+
+# Week 5
+Started sprint 2. Worked on connections for the backend. Finished retrospective A meeting and report.
