delete api done

--- a/diaries/z5255613.md
+++ b/diaries/z5255613.md
@@ -13,3 +13,11 @@
 * fixed bugs for put api
 * improved error checks for login and signup
 * discussed demo approach
+
+# Week 5:
+* wrote project api's
+* met with team and did retro
+
+# Week 6:
+* refactored code for better reusability
+* fixed bugs for project api's
