Add week 5 entry

--- a/diaries/z5362204.md
+++ b/diaries/z5362204.md
@@ -12,3 +12,7 @@
 # Week 4
 * setup & document docker-compose to run the pPstgres database and backend API
 * finish assigned tickets for sprint 1
+
+# Week 5
+* complete the frontend for connections Friends Page 
+* create script to mock users 
