update work diary

--- a/diaries/z5207613.md
+++ b/diaries/z5207613.md
@@ -12,3 +12,6 @@ Started and finished coding for the backend in sprint 1. Made sure that the work
 
 # Week 5
 Started sprint 2. Worked on connections for the backend. Finished retrospective A meeting and report.
+
+# Week 7
+Finished backend work for sprint 2. Made sure that jira was updated and that all tickets were completed for week 8 demo B.
