--- a/diaries/z5255613.md
+++ b/diaries/z5255613.md
@@ -21,3 +21,8 @@
 # Week 6:
 * refactored code for better reusability
 * fixed bugs for project api's
+
+# Week 7:
+* fixed bug for profile PUT api
+* started planning backend tasks approach and setting up file structure
+* met with team regarding previous tickets and week 8 demo
