--- a/diaries/z5362204.md
+++ b/diaries/z5362204.md
@@ -16,3 +16,6 @@
 # Week 5
 * complete the frontend for connections Friends Page 
 * create script to mock users 
+
+# Week 7
+* work on happiness tracker
