--- a/diaries/z5311419.md
+++ b/diaries/z5311419.md
@@ -14,3 +14,14 @@
 - Set up frontend file structure
 - Completed allocated tickets for sprint 1
 - Completed demo 
+# Week 5
+- Assigned to work for sprint 2 (project tickets)
+- Began working on those tickets
+# Week 7
+- Finished assigned tickets
+- Ran a soft demo
+# Week 8
+- Completed demo
+- Had retrospective meeting
+- Assigned task for sprint 3 (Task)
+- Assigned sections for final report
