--- a/diaries/z5214481.md
+++ b/diaries/z5214481.md
@@ -19,3 +19,15 @@
 - Complete sign up page
 - Complete profile page (excluding busyness and perks/tier info page)
 - Prep for demo
+
+# Week 5:
+- Start sprint 2 and assign tasks accordingly
+- Implement 404 page
+- Update pages/components based off of feedback from demo A.
+
+# Week 6:
+- Implement dashboard page 
+- Replace mock data with api call functionality
+
+# Week 7:
+- implement modal to view friend/connection requests
