--- a/diaries/z5207613.md
+++ b/diaries/z5207613.md
@@ -15,3 +15,9 @@ Started sprint 2. Worked on connections for the backend. Finished retrospective 
 
 # Week 7
 Finished backend work for sprint 2. Made sure that jira was updated and that all tickets were completed for week 8 demo B.
+
+# Week 8
+Assigned work for the final sprint in Jira. Started coding the backend for the final sprint. Finished retrospecive B meeting and report.
+
+# Week 9
+Finialised the backend for the project. Began work on the final report. Ran practice final demo for the project with the entire team.
