--- a/diaries/z5311419.md
+++ b/diaries/z5311419.md
@@ -25,3 +25,6 @@
 - Had retrospective meeting
 - Assigned task for sprint 3 (Task)
 - Assigned sections for final report
+# Week 9 
+- Finished tickets for task
+- Did practise demo, ironed out bugs
