--- a/diaries/z5214481.md
+++ b/diaries/z5214481.md
@@ -30,4 +30,14 @@
 - Replace mock data with api call functionality
 
 # Week 7:
-- implement modal to view friend/connection requests
+- Implement modal to view friend/connection requests
+
+# Week 8:
+- Complete retro
+- Plan for sprint 3
+- Implement tier info page
+- Upgrade profile page depending on points earned
+
+# Week 9:
+- Implement project statistics page
+- Show points earned and busyness on profile page
