--- a/diaries/z5362204.md
+++ b/diaries/z5362204.md
@@ -24,5 +24,6 @@
 * update script to generate projects and connections
 * complete happiness tracker frontend and backend
 
-# Week 9 [current]
+# Week 9
 * update script to generate tasks for projects
+* Dry run demo with team
