--- a/diaries/z5255613.md
+++ b/diaries/z5255613.md
@@ -32,3 +32,6 @@
 * added doc strings to all important backend functions
 
 # Week 9:
+* fixed bugs with api's
+* modified api's to return sorted lists
+* finished my section of report
