--- a/diaries/z5214481.md
+++ b/diaries/z5214481.md
@@ -41,3 +41,8 @@
 # Week 9:
 - Implement project statistics page
 - Show points earned and busyness on profile page
+
+# Week 10:
+- Prep for final demo
+- Work on final report
+- Clean up and document frontend
