Add week 10 entry

--- a/diaries/z5362204.md
+++ b/diaries/z5362204.md
@@ -26,4 +26,7 @@
 
 # Week 9
 * update script to generate tasks for projects
-* Dry run demo with team
+* dry run demo with team
+
+# Week 10
+* Submit code and report
